@@ -150,7 +150,20 @@ $TCA['tt_address'] = array (
 				'type' => 'input',
 				'eval' => 'trim',
 				'size' => '20',
-				'max'  => '255'
+				'max'  => '255',
+				'wizards' => array(
+					'_PADDING' => 2,
+					'link' => array(
+						'type' => 'popup',
+						'title' => 'LLL:EXT:cms/locallang_ttc.xml:header_link_formlabel',
+						'icon' => 'link_popup.gif',
+						'script' => 'browse_links.php?mode=wizard&act=page|url',
+						'params' => array(
+							'blindLinkOptions' => 'mail,file,spec,folder',
+						),
+						'JSopenParams' => 'height=300,width=500,status=0,menubar=0,scrollbars=1',
+					),
+				)
 			)
 		),
 		'email' => array (
