@@ -1,6 +1,7 @@
 2012-05-30 Lorenz Ulrich <lorenz.ulrich@visol.ch>
 	* FIX issue #M18489: Fatal error using non existing int() function
 	* FIX issue #M8725: Missing microformat classes for email, mobile, fax
+	* FIX issue #M7095: Add link wizard to www field
 
 2011-08-08 Michael Miousse <mmiousse@infoglobe.ca>
 	* ADD added feature #18242, Missing stdWrap on groupSelection
